<resources>
    <string name="app_name">UFitness</string>
    <string name="excercises">Упражнения</string>
    <string name="trainings">Планы тренировок</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="support">Сопровождение</string>

    <string name="type_your_name">Введите свое имя</string>
    <string name="info_hint">Приложение запомнит ваше имя и будет использовать его при отправке данных в мессенджеры</string>
    <string name="Confirm">Подтвердить</string>

    <string name="exercises_hint">Здесь будут ваши упражнения</string>
    <string name="exercise_name">Название упражнения</string>
    <string name="exercise_desc">Описание упражнения</string>

    <string name="plans_hint">Здесь будут отображены ваши тренировочные комплексы</string>
    <string name="plan_name">Название плана тренировки</string>
    <string name="plan_purpose">Назначение</string>
    <string name="plan_exercises">Выбор упражнений</string>

    <string name="save">Сохранить</string>
    <string name="description">Описание:</string>
    <string name="next">Следующее</string>
    <string name="launch">Запуск</string>

    <string name="exercise_template">Упражнение: %s</string>
    <string name="share">Поделиться</string>
</resources>